Added content to photo.html

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
         🥐 Croissant
     </h1>
     <p>
-        A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for its historical crescent shape.
+        A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for its historical crescent
+        shape.
         Croissants and other viennoiserie are made of a layered yeast-leavened dough
     </p>
-    <a href="/" class="mr-3 text-success">Homapage </a>
-    <a href="/photo.html " class="mr-3 text-success">Photo</a>
-    <a href="/contact.html" class="text-success">Contact</a>
+    <footer>
+        <a href="/" class="mr-3 text-success">Homapage </a>
+        <a href="/photo.html " class="mr-3 text-success">Photo</a>
+        <a href="/contact.html" class="text-success">Contact</a>
+    </footer>
 </body>
