Added content to contact.html and tittle to links and img

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         Croissants and other viennoiserie are made of a layered yeast-leavened dough
     </p>
     <footer>
-        <a href="/" class="mr-3 text-success">Homapage </a>
-        <a href="/photo.html " class="mr-3 text-success">Photo</a>
-        <a href="/contact.html" class="text-success">Contact</a>
+        <a href="/" class="mr-3 text-success" title="Home">Homapage </a>
+        <a href="/photo.html " class="mr-3 text-success" title="Croissant photo">Photo</a>
+        <a href="/contact.html" class="text-success" title="Contact Croissant.com">Contact</a>
     </footer>
 </body>
