--- a/photo.html
+++ b/photo.html
@@ -20,10 +20,10 @@
     <h1>
         🥐 A picture of a croissant
     </h1>
-    <img src="/images/croissant.webp" class="img-fluid  croissant-photo" alt="">
+    <img src="/images/croissant.webp" alt="Homemade croissants" class="img-fluid  croissant-photo" alt="">
     <footer>
-        <a href="/" class="mr-3 text-success">Homapage </a>
-        <a href="/photo.html " class="mr-3 text-success">Photo</a>
-        <a href="/contact.html" class="text-success">Contact</a>
+        <a href="/" class="mr-3 text-success" title="Home">Homapage </a>
+        <a href="/photo.html " class="mr-3 text-success" title="Croissant photo">Photo</a>
+        <a href="/contact.html" class="text-success" title="Contact Croissant.com">Contact</a>
     </footer>
 </body>
