Changed the titles of the pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/src/style.css">
 
-    <title>Croissant</title>
+    <title>The best croissant in New York - Croissant.com</title>
 </head>
 
 <body>
