--- a/photo.html
+++ b/photo.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/src/style.css">
 
-    <title>Croissant</title>
+    <title>An example of the perfect croissants - Croissant.com</title>
 </head>
 
 <body>
