--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/src/style.css">
 
-    <title>Croissant</title>
+    <title>Contact us - Croissant.com</title>
 </head>
 
 <body>
