--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description"
-        content="Contact croissant.com and send email to oksana.schwez@gmail.com to learn more about our homemade croissants">
+        content="Contact croissant.com and send us email to learn more about our homemade croissants">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -22,8 +22,8 @@
         🥐 Contact us
     </h1>
     <p>
-        To contact croissant.com, please email us at 
-        <a href="mailto:hello@croissant.com" title="contact us by email">hello@croissant.com</a> for more info
+        To contact croissant.com, please 
+        <a href="mailto:hello@croissant.com" title="contact us by email"> email us for more info</a> 
     </p>
     <footer>
         <a href="/" class="mr-3 text-success" title="Home">Homapage </a>
